force-app/main/default/objects/Lead/fields/lead_s_email_address__c.field-meta.xml
<CustomField>
    <fullName>lead_s_email_address__c</fullName>
    <formula>IF(  $User.Username  = &quot;test-4ve1mxzej9xz@example.com&quot;, &quot;&quot;,  Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lead&apos;s email address</label>
    <type>Text</type>
</CustomField>