force-app/main/default/objects/Lead/fields/NextStep__c.field-meta.xml
<CustomField>
    <fullName>NextStep__c</fullName>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>