force-app/main/default/objects/Lead/validationRules/character_a_in_the_Lead_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>character_a_in_the_Lead_Email</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( MID( Email , 5, 7), &quot;a&quot;)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>remove character ‘a’ in the Lead object’s Email field between the 5th character and the 12th character</errorMessage>
</ValidationRule>