force-app/main/default/objects/Lead/validationRules/Either_email_or_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_email_or_phone</fullName>
    <active>true</active>
    <description>Either the Email or the Phone number, is required to create a lead in the system.</description>
    <errorConditionFormula>AND(ISBLANK( Email ), ISBLANK( Phone ))</errorConditionFormula>
    <errorMessage>Either the email or phone number should be filled</errorMessage>
</ValidationRule>