force-app/main/default/objects/Lead/validationRules/Ten_digit_phone_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Ten_digit_phone_number</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Country__c , &quot;United States&quot;) ,  
    IF( LEN( Phone ) &lt; 10 ,true, false) , 
       false)</errorConditionFormula>
    <errorMessage>phone number is invalid</errorMessage>
</ValidationRule>