force-app/main/default/objects/Lead/validationRules/validation_source_field.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_source_field</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( LeadSource , &quot;&quot;)</errorConditionFormula>
    <errorMessage>Lead Source can&apos;t be empty</errorMessage>
</ValidationRule>